# funsort

./: .gitignore  ALGORITHMS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/funsort/: __init__.py  funsort.py
src/funsort/Esoteric/: __init__.py  adhd.py  bogo.py  bozo.py  intelligentdesign.py  miracle.py  schrodinger.py  sixseven.py  sleep.py  stalin.py  stooge.py  thanos.py
src/funsort/Proper/: __init__.py  bubble.py  count.py  heap.py  insertion.py  merge.py  quick.py  radix.py  selection.py
