[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funsort"
version = "1.0.1"
description = "Fun sorting algorithms in Python!"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Derek Li" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
